--- a/index.html
+++ b/index.html
@@ -64,23 +64,18 @@
       </thead>
       <tbody>
 	<tr>
-          <td>11&nbsp;July &nbsp;2024</td>
-	  <td> Siyuan Gou </td>
-          <td><a href="https://arxiv.org/abs/2307.03864"><b>When Do Transformers Shine in RL? Decoupling Memory from Credit Assignment</b></a> Tianwei Ni, Michel Ma, Benjamin Eysenbach, Pierre-Luc Bacon, NeurIPS 2023</td>
-        </tr>
-	<tr>
-          <td>18&nbsp;July &nbsp;2024</td>
-	  <td> Syeda Zahra		</td>
-          <td><a href="https://arxiv.org/abs/2304.03271"><b>Making AI Less "Thirsty": Uncovering and Addressing the Secret Water Footprint of AI Models</b></a> Pengfei Li, Jianyi Yang, Mohammad A. Islam, Shaolei Ren </td>
-        </tr>
-	<tr>
           <td>1&nbsp;Aug &nbsp;2024</td>
 	  <td> Dr Julian Padget </td>
           <td>TBC</td>
         </tr>
 	<tr>
           <td>15&nbsp;Aug &nbsp;2024</td>
-	  <td> Akshil Patel </td>
+	  <td> Professor Özgür Şimşek	 </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>19&nbsp;Aug &nbsp;2024</td>
+	  <td> Thomas Smith	 </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,9 +86,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Rohit Babbar	</li>
-	<li>Professor Özgür Şimşek	</li>
-	<li>Thomas Smith	</li>
 	<li>Dr Jie Zhang	</li>
 	<li>Todd Van Steenwyk</li>
 	<li>Dr Gennaro Auricchio	</li>
@@ -192,6 +184,16 @@
           <td>27&nbsp;June &nbsp;2024</td>
 	  <td> Dr Marina De Vos </td>
           <td><a href="https://arxiv.org/abs/2302.12389"><b> Explainable AI is Dead, Long Live Explainable AI! </b></a> Tim Miller, Proceedings of the 2023 ACM Conference on Fairness, Accountability, and Transparency </td>
+        </tr>
+	<tr>
+          <td>11&nbsp;July &nbsp;2024</td>
+	  <td> Siyuan Gou </td>
+          <td><a href="https://arxiv.org/abs/2307.03864"><b>When Do Transformers Shine in RL? Decoupling Memory from Credit Assignment</b></a> Tianwei Ni, Michel Ma, Benjamin Eysenbach, Pierre-Luc Bacon, NeurIPS 2023</td>
+        </tr>
+	<tr>
+          <td>18&nbsp;July &nbsp;2024</td>
+	  <td> Syeda Zahra		</td>
+          <td><a href="https://arxiv.org/abs/2304.03271"><b>Making AI Less "Thirsty": Uncovering and Addressing the Secret Water Footprint of AI Models</b></a> Pengfei Li, Jianyi Yang, Mohammad A. Islam, Shaolei Ren </td>
         </tr>
       </tbody>
     </table>
