--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 	<li>Tom Ryder	</li>
 	<li>Alexandros Rotsidis	</li>
 	<li>Dr Andrew Barnes	</li>
+	<li>Doug Tilley </li>v
 	<li>Dr Alexander Power	</li>
 	<li>Emma Li	</li>
 	<li> Matthew Hewitt </li>
