--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <td>TBC</td>
         </tr>
 	<tr>
-          <td>19&nbsp;Aug &nbsp;2024</td>
+          <td>29&nbsp;Aug &nbsp;2024</td>
 	  <td> Thomas Smith	 </td>
           <td>TBC</td>
         </tr>
@@ -102,7 +102,7 @@
 	<li>Tom Ryder	</li>
 	<li>Alexandros Rotsidis	</li>
 	<li>Dr Andrew Barnes	</li>
-	<li>Doug Tilley </li>v
+	<li>Doug Tilley </li>
 	<li>Dr Alexander Power	</li>
 	<li>Emma Li	</li>
 	<li> Matthew Hewitt </li>
