--- a/index.html
+++ b/index.html
@@ -64,17 +64,18 @@
       </thead>
       <tbody>
 	<tr>
-          <td>1&nbsp;Aug &nbsp;2024</td>
+          <td>26&nbsp;Sep &nbsp;2024</td>
 	  <td> Dr Julian Padget </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/1901.10002"><b>A Framework for Understanding Sources of Harm throughout the Machine Learning Life Cycle</b></a> Harini Suresh, John V. Guttag, Proceedings of the 1st ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization, 2021.</td>
+        </tr>
         </tr>
 	<tr>
-          <td>15&nbsp;Aug &nbsp;2024</td>
+          <td>10&nbsp;Oct &nbsp;2024</td>
 	  <td> Professor Özgür Şimşek	 </td>
           <td>TBC</td>
         </tr>
 	<tr>
-          <td>29&nbsp;Aug &nbsp;2024</td>
+          <td>24&nbsp;Oct &nbsp;2024</td>
 	  <td> Thomas Smith	 </td>
           <td>TBC</td>
         </tr>
