--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         </tr>
 	<tr>
           <td>10&nbsp;Oct &nbsp;2024</td>
-	  <td> Professor Özgür Şimşek	 </td>
+	  <td> Thomas Smith </td>
           <td>TBC</td>
         </tr>
 	<tr>
           <td>24&nbsp;Oct &nbsp;2024</td>
-	  <td> Thomas Smith	 </td>
+	  <td> Professor Özgür Şimşek	 </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -90,6 +90,7 @@
 	<li>Dr Jie Zhang	</li>
 	<li>Todd Van Steenwyk</li>
 	<li>Dr Gennaro Auricchio	</li>
+	<li>Akshil Patel </li>
 	<li>Lukas Macha	</li>
 	<li>Professor Neill Campbell 	</li>
 	<li>Daniel Beechey	</li>
