--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
 	  <td> Professor Özgür Şimşek	 </td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>7&nbsp;Nov &nbsp;2024</td>
+	  <td> Dr Jie Zhang </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>21&nbsp;Nov &nbsp;2024</td>
+	  <td> Todd Van Steenwyk </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -87,8 +97,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Jie Zhang	</li>
-	<li>Todd Van Steenwyk</li>
 	<li>Dr Gennaro Auricchio	</li>
 	<li>Akshil Patel </li>
 	<li>Lukas Macha	</li>
