--- a/index.html
+++ b/index.html
@@ -63,16 +63,11 @@
         </tr>
       </thead>
       <tbody>
-	<tr>
-          <td>26&nbsp;Sep &nbsp;2024</td>
-	  <td> Dr Julian Padget </td>
-          <td><a href="https://arxiv.org/abs/1901.10002"><b>A Framework for Understanding Sources of Harm throughout the Machine Learning Life Cycle</b></a> Harini Suresh, John V. Guttag, Proceedings of the 1st ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization, 2021.</td>
-        </tr>
-        </tr>
+
 	<tr>
           <td>10&nbsp;Oct &nbsp;2024</td>
 	  <td> Thomas Smith </td>
-          <td>TBC</td>
+          <td><a href="https://proceedings.neurips.cc/paper/2021/file/e614f646836aaed9f89ce58e837e2310-Paper.pdf"><b>Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation</b></a> Emmanuel Bengio, Moksh Jain, Maksym Korablyov, Doina Precup, Yoshua Bengio, NeurIPS 2021.</td>
         </tr>
 	<tr>
           <td>24&nbsp;Oct &nbsp;2024</td>
@@ -87,6 +82,11 @@
 	<tr>
           <td>21&nbsp;Nov &nbsp;2024</td>
 	  <td> Todd Van Steenwyk </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>5&nbsp;Dec &nbsp;2024</td>
+	  <td> Dr Gennaro Auricchio </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -205,6 +205,11 @@
           <td>18&nbsp;July &nbsp;2024</td>
 	  <td> Syeda Zahra		</td>
           <td><a href="https://arxiv.org/abs/2304.03271"><b>Making AI Less "Thirsty": Uncovering and Addressing the Secret Water Footprint of AI Models</b></a> Pengfei Li, Jianyi Yang, Mohammad A. Islam, Shaolei Ren </td>
+        </tr>
+	<tr>
+          <td>26&nbsp;Sep &nbsp;2024</td>
+	  <td> Dr Julian Padget </td>
+          <td><a href="https://arxiv.org/abs/1901.10002"><b>A Framework for Understanding Sources of Harm throughout the Machine Learning Life Cycle</b></a> Harini Suresh, John V. Guttag, Proceedings of the 1st ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization, 2021.</td>
         </tr>
       </tbody>
     </table>
