--- a/index.html
+++ b/index.html
@@ -63,16 +63,10 @@
         </tr>
       </thead>
       <tbody>
-
-	<tr>
-          <td>10&nbsp;Oct &nbsp;2024</td>
-	  <td> Thomas Smith </td>
-          <td><a href="https://proceedings.neurips.cc/paper/2021/file/e614f646836aaed9f89ce58e837e2310-Paper.pdf"><b>Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation</b></a> Emmanuel Bengio, Moksh Jain, Maksym Korablyov, Doina Precup, Yoshua Bengio, NeurIPS 2021.</td>
-        </tr>
 	<tr>
           <td>24&nbsp;Oct &nbsp;2024</td>
-	  <td> Professor Özgür Şimşek	 </td>
-          <td>TBC</td>
+	  <td> Callum Pitceathly </td>
+	  <td><a href="https://arxiv.org/abs/2310.08887"><b>METRA: Scalable Unsupervised RL with Metric-Aware Abstraction </b></a> Seohong Park, Oleh Rybkin, Sergey Levine,  ICLR 2024 </td>
         </tr>
 	<tr>
           <td>7&nbsp;Nov &nbsp;2024</td>
@@ -107,7 +101,7 @@
 	<li>Dil Jagpal	</li>
 	<li>Professor Mike Tipping	</li>
 	<li>Dr Harish Tayyar Madabushi	</li>
-	<li>Callum Pitceathly	</li>
+	<li>Professor Özgür Şimşek	</li>
 	<li>Jack R Saunders	</li>
 	<li>Tom Ryder	</li>
 	<li>Alexandros Rotsidis	</li>
@@ -210,6 +204,11 @@
           <td>26&nbsp;Sep &nbsp;2024</td>
 	  <td> Dr Julian Padget </td>
           <td><a href="https://arxiv.org/abs/1901.10002"><b>A Framework for Understanding Sources of Harm throughout the Machine Learning Life Cycle</b></a> Harini Suresh, John V. Guttag, Proceedings of the 1st ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization, 2021.</td>
+        </tr>
+	<tr>
+          <td>10&nbsp;Oct &nbsp;2024</td>
+	  <td> Thomas Smith </td>
+          <td><a href="https://proceedings.neurips.cc/paper/2021/file/e614f646836aaed9f89ce58e837e2310-Paper.pdf"><b>Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation</b></a> Emmanuel Bengio, Moksh Jain, Maksym Korablyov, Doina Precup, Yoshua Bengio, NeurIPS 2021.</td>
         </tr>
       </tbody>
     </table>
