--- a/index.html
+++ b/index.html
@@ -64,14 +64,9 @@
       </thead>
       <tbody>
 	<tr>
-          <td>24&nbsp;Oct &nbsp;2024</td>
-	  <td> Callum Pitceathly </td>
-	  <td><a href="https://arxiv.org/abs/2310.08887"><b>METRA: Scalable Unsupervised RL with Metric-Aware Abstraction </b></a> Seohong Park, Oleh Rybkin, Sergey Levine,  ICLR 2024 </td>
-        </tr>
-	<tr>
           <td>7&nbsp;Nov &nbsp;2024</td>
 	  <td> Dr Jie Zhang </td>
-          <td>TBC</td>
+          <td><a href="https://proceedings.neurips.cc/paper/2021/file/8b8388180314a337c9aa3c5aa8e2f37a-Paper.pdf"><b>Learning-Augmented Dynamic Power Management with Multiple States via New Ski Rental Bounds</b></a> Antonios Antoniadis, Christian Coester, Marek Eliáš, Adam Polak, Bertrand Simon, NeurIPS 2021</td>
         </tr>
 	<tr>
           <td>21&nbsp;Nov &nbsp;2024</td>
@@ -80,7 +75,7 @@
         </tr>
 	<tr>
           <td>5&nbsp;Dec &nbsp;2024</td>
-	  <td> Dr Gennaro Auricchio </td>
+	  <td> Akshil Patel </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,8 +86,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Gennaro Auricchio	</li>
-	<li>Akshil Patel </li>
 	<li>Lukas Macha	</li>
 	<li>Professor Neill Campbell 	</li>
 	<li>Daniel Beechey	</li>
@@ -209,6 +202,11 @@
           <td>10&nbsp;Oct &nbsp;2024</td>
 	  <td> Thomas Smith </td>
           <td><a href="https://proceedings.neurips.cc/paper/2021/file/e614f646836aaed9f89ce58e837e2310-Paper.pdf"><b>Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation</b></a> Emmanuel Bengio, Moksh Jain, Maksym Korablyov, Doina Precup, Yoshua Bengio, NeurIPS 2021.</td>
+        </tr>
+	<tr>
+          <td>24&nbsp;Oct &nbsp;2024</td>
+	  <td> Callum Pitceathly </td>
+	  <td><a href="https://arxiv.org/abs/2310.08887"><b>METRA: Scalable Unsupervised RL with Metric-Aware Abstraction </b></a> Seohong Park, Oleh Rybkin, Sergey Levine,  ICLR 2024 </td>
         </tr>
       </tbody>
     </table>
