--- a/index.html
+++ b/index.html
@@ -63,20 +63,11 @@
         </tr>
       </thead>
       <tbody>
-	<tr>
-          <td>7&nbsp;Nov &nbsp;2024</td>
-	  <td> Dr Jie Zhang </td>
-          <td><a href="https://proceedings.neurips.cc/paper/2021/file/8b8388180314a337c9aa3c5aa8e2f37a-Paper.pdf"><b>Learning-Augmented Dynamic Power Management with Multiple States via New Ski Rental Bounds</b></a> Antonios Antoniadis, Christian Coester, Marek Eliáš, Adam Polak, Bertrand Simon, NeurIPS 2021</td>
-        </tr>
-	<tr>
-          <td>21&nbsp;Nov &nbsp;2024</td>
-	  <td> Todd Van Steenwyk </td>
-          <td>TBC</td>
-        </tr>
+
 	<tr>
           <td>12&nbsp;Dec &nbsp;2024</td>
 	  <td> Akshil Patel </td>
-          <td>TBC</td>
+          <td><a href="https://openreview.net/forum?id=S1x4ghC9tQ"><b>Temporal Difference Variational Auto-Encoder</b></a> Karol Gregor, George Papamakarios, Frederic Besse, Lars Buesing, Theophane Weber, ICLR 2019</td>
         </tr>
       </tbody>
     </table>
@@ -207,6 +198,11 @@
           <td>24&nbsp;Oct &nbsp;2024</td>
 	  <td> Callum Pitceathly </td>
 	  <td><a href="https://arxiv.org/abs/2310.08887"><b>METRA: Scalable Unsupervised RL with Metric-Aware Abstraction </b></a> Seohong Park, Oleh Rybkin, Sergey Levine,  ICLR 2024 </td>
+        </tr>
+	<tr>
+          <td>7&nbsp;Nov &nbsp;2024</td>
+	  <td> Dr Jie Zhang </td>
+          <td><a href="https://proceedings.neurips.cc/paper/2021/file/8b8388180314a337c9aa3c5aa8e2f37a-Paper.pdf"><b>Learning-Augmented Dynamic Power Management with Multiple States via New Ski Rental Bounds</b></a> Antonios Antoniadis, Christian Coester, Marek Eliáš, Adam Polak, Bertrand Simon, NeurIPS 2021</td>
         </tr>
       </tbody>
     </table>
