--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
         </tr>
       </thead>
       <tbody>
-
+	<tr>
+          <td>12&nbsp;Dec &nbsp;2024</td>
+	  <td> Akshil Patel </td>
+          <td><a href="https://openreview.net/forum?id=S1x4ghC9tQ"><b>Temporal Difference Variational Auto-Encoder</b></a> Karol Gregor, George Papamakarios, Frederic Besse, Lars Buesing, Theophane Weber, ICLR 2019</td>
+        </tr>
 	<tr>
           <td>12&nbsp;Dec &nbsp;2024</td>
 	  <td> Akshil Patel </td>
