--- a/index.html
+++ b/index.html
@@ -66,12 +66,7 @@
 	<tr>
           <td>12&nbsp;Dec &nbsp;2024</td>
 	  <td> Akshil Patel </td>
-          <td><a href="https://openreview.net/forum?id=S1x4ghC9tQ"><b>Temporal Difference Variational Auto-Encoder</b></a> Karol Gregor, George Papamakarios, Frederic Besse, Lars Buesing, Theophane Weber, ICLR 2019</td>
-        </tr>
-	<tr>
-          <td>12&nbsp;Dec &nbsp;2024</td>
-	  <td> Akshil Patel </td>
-          <td><a href="https://openreview.net/forum?id=S1x4ghC9tQ"><b>Temporal Difference Variational Auto-Encoder</b></a> Karol Gregor, George Papamakarios, Frederic Besse, Lars Buesing, Theophane Weber, ICLR 2019</td>
+          <td><a href="https://arxiv.org/pdf/1702.08396"><b>Learning Hierarchical Features from Generative Models</b></a> Shengjia Zhao, Jiaming Song, Stefano Ermon, ICML 2017</td>
         </tr>
       </tbody>
     </table>
