--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
         </tr>
       </thead>
       <tbody>
+	<tr>
+          <td>20&nbsp;Feb &nbsp;2024</td>
+	  <td> Dr Harish Tayyar Madabushi	 </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>6&nbsp;Mar &nbsp;2024</td>
+	  <td> Lukas Macha	 </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>20&nbsp;Mar &nbsp;2024</td>
+	  <td> Professor Neill Campbell  </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -71,14 +86,11 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Lukas Macha	</li>
-	<li>Professor Neill Campbell 	</li>
 	<li>Daniel Beechey	</li>
 	<li>Ferdie Krammer </li>
 	<li>Dr Wenbin Li 	</li>
 	<li>Dil Jagpal	</li>
 	<li>Professor Mike Tipping	</li>
-	<li>Dr Harish Tayyar Madabushi	</li>
 	<li>Professor Özgür Şimşek	</li>
 	<li>Jack R Saunders	</li>
 	<li>Tom Ryder	</li>
