--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
       </thead>
       <tbody>
 	<tr>
-          <td>20&nbsp;Feb &nbsp;2024</td>
-	  <td> Dr Harish Tayyar Madabushi	 </td>
-          <td>TBC</td>
-        </tr>
-	<tr>
-          <td>6&nbsp;Mar &nbsp;2024</td>
-	  <td> Lukas Macha	 </td>
-          <td>TBC</td>
-        </tr>
-	<tr>
-          <td>20&nbsp;Mar &nbsp;2024</td>
+          <td>20&nbsp;Mar &nbsp;2025</td>
 	  <td> Professor Neill Campbell  </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>TBC</td>
+	  <td> Ferdie Krammer  </td>
+          <td>TBC</td>
+	</tr>
+	<tr>
+          <td>TBC</td>
+	  <td> Dr Wenbin Li </td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -86,9 +86,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Daniel Beechey	</li>
-	<li>Ferdie Krammer </li>
-	<li>Dr Wenbin Li 	</li>
 	<li>Dil Jagpal	</li>
 	<li>Professor Mike Tipping	</li>
 	<li>Professor Özgür Şimşek	</li>
@@ -214,6 +211,11 @@
           <td>12&nbsp;Dec &nbsp;2024</td>
 	  <td> Akshil Patel </td>
           <td><a href="https://arxiv.org/pdf/1702.08396"><b>Learning Hierarchical Features from Generative Models</b></a> Shengjia Zhao, Jiaming Song, Stefano Ermon, ICML 2017</td>
+        </tr>
+	<tr>
+          <td>20&nbsp;Feb &nbsp;2024</td>
+	  <td> Dr Harish Tayyar Madabushi	 </td>
+          <td>From Text to Thought: A (brief) Tutorial on Reasoning in Large Language Models</td>
         </tr>
       </tbody>
     </table>
