--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           <td>TBC</td>
         </tr>
 	<tr>
-          <td>TBC</td>
+          <td>17&nbsp;Apr &nbsp;2025</td>
 	  <td> Ferdie Krammer  </td>
           <td>TBC</td>
 	</tr>
 	<tr>
-          <td>TBC</td>
+          <td>1&nbsp;May &nbsp;2025</td>
 	  <td> Dr Wenbin Li </td>
           <td>TBC</td>
         </tr>
