--- a/index.html
+++ b/index.html
@@ -64,14 +64,9 @@
       </thead>
       <tbody>
 	<tr>
-          <td>20&nbsp;Mar &nbsp;2025</td>
-	  <td> Professor Neill Campbell  </td>
-          <td>TBC</td>
-        </tr>
-	<tr>
           <td>24&nbsp;Apr &nbsp;2025</td>
 	  <td> Ferdie Krammer  </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2302.00587"><b>Molecular Graph Generation by Decomposition and Reassembling</b></a> Masatsugu Yamada, Mahito Sugiyama, ACS omega, 2023 </td>
 	</tr>
 	<tr>
           <td>1&nbsp;May &nbsp;2025</td>
