--- a/index.html
+++ b/index.html
@@ -69,8 +69,18 @@
           <td><a href="https://arxiv.org/abs/2302.00587"><b>Molecular Graph Generation by Decomposition and Reassembling</b></a> Masatsugu Yamada, Mahito Sugiyama, ACS omega, 2023 </td>
 	</tr>
 	<tr>
-          <td>1&nbsp;May &nbsp;2025</td>
-	  <td> Dr Wenbin Li </td>
+          <td>8&nbsp;May &nbsp;2025</td>
+	  <td> Zilin Zhang </td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>22&nbsp;May &nbsp;2025</td>
+	  <td> Dil Jagpal	</td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>5&nbsp;Jun &nbsp;2025</td>
+	  <td> Dil Jagpal	</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -81,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dil Jagpal	</li>
 	<li>Professor Mike Tipping	</li>
 	<li>Professor Özgür Şimşek	</li>
 	<li>Jack R Saunders	</li>
