--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </tr>
 	<tr>
           <td>5&nbsp;Jun &nbsp;2025</td>
-	  <td> Dil Jagpal	</td>
+	  <td> Professor Mike Tipping	</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Professor Mike Tipping	</li>
 	<li>Professor Özgür Şimşek	</li>
 	<li>Jack R Saunders	</li>
 	<li>Tom Ryder	</li>
