--- a/index.html
+++ b/index.html
@@ -64,14 +64,9 @@
       </thead>
       <tbody>
 	<tr>
-          <td>24&nbsp;Apr &nbsp;2025</td>
-	  <td> Ferdie Krammer  </td>
-          <td><a href="https://arxiv.org/abs/2302.00587"><b>Molecular Graph Generation by Decomposition and Reassembling</b></a> Masatsugu Yamada, Mahito Sugiyama, ACS omega, 2023 </td>
-	</tr>
-	<tr>
           <td>8&nbsp;May &nbsp;2025</td>
 	  <td> Zilin Zhang </td>
-          <td>TBC</td>
+          <td><a href="https://arxiv.org/abs/2402.04717"><b>InstructScene: Instruction-Driven 3D Indoor Scene Synthesis with Semantic Graph Prior</b></a> Chenguo Lin, Yadong Mu, ICLR 2024 </td>
         </tr>
 	<tr>
           <td>22&nbsp;May &nbsp;2025</td>
@@ -83,6 +78,11 @@
 	  <td> Professor Mike Tipping	</td>
           <td>TBC</td>
         </tr>
+	<tr>
+          <td>19&nbsp;Jun &nbsp;2025</td>
+	  <td> Professor Özgür Şimşek	</td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -91,7 +91,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Professor Özgür Şimşek	</li>
 	<li>Jack R Saunders	</li>
 	<li>Tom Ryder	</li>
 	<li>Alexandros Rotsidis	</li>
@@ -220,6 +219,11 @@
 	  <td> Dr Harish Tayyar Madabushi	 </td>
           <td>From Text to Thought: A (brief) Tutorial on Reasoning in Large Language Models</td>
         </tr>
+	<tr>
+          <td>24&nbsp;Apr &nbsp;2025</td>
+	  <td> Ferdie Krammer  </td>
+          <td><a href="https://arxiv.org/abs/2302.00587"><b>Molecular Graph Generation by Decomposition and Reassembling</b></a> Masatsugu Yamada, Mahito Sugiyama, ACS omega, 2023 </td>
+	</tr>
       </tbody>
     </table>
   </div>
