--- a/index.html
+++ b/index.html
@@ -64,16 +64,6 @@
       </thead>
       <tbody>
 	<tr>
-          <td>8&nbsp;May &nbsp;2025</td>
-	  <td> Zilin Zhang </td>
-          <td><a href="https://arxiv.org/abs/2402.04717"><b>InstructScene: Instruction-Driven 3D Indoor Scene Synthesis with Semantic Graph Prior</b></a> Chenguo Lin, Yadong Mu, ICLR 2024 </td>
-        </tr>
-	<tr>
-          <td>22&nbsp;May &nbsp;2025</td>
-	  <td> Dil Jagpal	</td>
-          <td>TBC</td>
-        </tr>
-	<tr>
           <td>5&nbsp;Jun &nbsp;2025</td>
 	  <td> Professor Mike Tipping	</td>
           <td>TBC</td>
@@ -81,6 +71,11 @@
 	<tr>
           <td>19&nbsp;Jun &nbsp;2025</td>
 	  <td> Professor Özgür Şimşek	</td>
+          <td>TBC</td>
+        </tr>
+	<tr>
+          <td>19&nbsp;Jun &nbsp;2025</td>
+	  <td> Tom Ryder</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -91,8 +86,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Jack R Saunders	</li>
-	<li>Tom Ryder	</li>
 	<li>Alexandros Rotsidis	</li>
 	<li>Dr Andrew Barnes	</li>
 	<li>Doug Tilley </li>
@@ -224,6 +217,11 @@
 	  <td> Ferdie Krammer  </td>
           <td><a href="https://arxiv.org/abs/2302.00587"><b>Molecular Graph Generation by Decomposition and Reassembling</b></a> Masatsugu Yamada, Mahito Sugiyama, ACS omega, 2023 </td>
 	</tr>
+	<tr>
+          <td>8&nbsp;May &nbsp;2025</td>
+	  <td> Zilin Zhang </td>
+          <td><a href="https://arxiv.org/abs/2402.04717"><b>InstructScene: Instruction-Driven 3D Indoor Scene Synthesis with Semantic Graph Prior</b></a> Chenguo Lin, Yadong Mu, ICLR 2024 </td>
+        </tr>
       </tbody>
     </table>
   </div>
