--- a/index.html
+++ b/index.html
@@ -86,21 +86,26 @@
 <h5>Future speakers </h5>
 
 <ol>
+	<li>Will Butler </li>
 	<li>Alexandros Rotsidis	</li>
 	<li>Dr Andrew Barnes	</li>
 	<li>Doug Tilley </li>
 	<li>Dr Alexander Power	</li>
 	<li>Emma Li	</li>
+	<li>Dina Theodosiadou </li>
 	<li> Matthew Hewitt </li>
 	<li>Ningchao Wang	</li>
 	<li>Yuchen Lu	</li>
 	<li>Isaac Flower	</li>
+	<li>Will Butler </li>
 	<li>Philip Lorimer	</li>
 	<li>Jundan Luo	</li>
 	<li>Dr Georgios Exarchakis	</li>
 	<li>James Elson	</li>
 	<li>Dr Xi Chen</li>
 	<li>Dona Shaji	</li>
+	<li> Teo Deveney </li>
+	<li>Victor Idongesit </li>
 </ol>  
 
 </p>
