--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
       </thead>
       <tbody>
 	<tr>
-          <td>5&nbsp;Jun &nbsp;2025</td>
-	  <td> Professor Mike Tipping	</td>
+          <td>9&nbsp;Oct &nbsp;2025</td>
+	  <td> Tom Ryder </td>
           <td>TBC</td>
         </tr>
 	<tr>
-          <td>19&nbsp;Jun &nbsp;2025</td>
+          <td>23&nbsp;Oct &nbsp;2025</td>
 	  <td> Professor Özgür Şimşek	</td>
           <td>TBC</td>
         </tr>
 	<tr>
-          <td>3&nbsp;Jul &nbsp;2025</td>
-	  <td> Tom Ryder</td>
+          <td>6&nbsp;Nov &nbsp;2025</td>
+	  <td> Will Butler</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -86,7 +86,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Will Butler </li>
 	<li>Alexandros Rotsidis	</li>
 	<li>Dr Andrew Barnes	</li>
 	<li>Doug Tilley </li>
