--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<tr>
           <td>9&nbsp;Oct &nbsp;2025</td>
 	  <td> Tom Ryder </td>
-          <td>TBC</td>
+          <td><a href="https://openreview.net/pdf?id=8C8LJIqF4y"><b>Time Series Domain Adaptation via Channel-Selective Representation Alignment</b></a> Nauman Ahad, Mark A. Davenport, and Eva L. Dyer;  TMLR 2025</td>
         </tr>
 	<tr>
           <td>23&nbsp;Oct &nbsp;2025</td>
