--- a/index.html
+++ b/index.html
@@ -63,19 +63,20 @@
         </tr>
       </thead>
       <tbody>
-	<tr>
-          <td>9&nbsp;Oct &nbsp;2025</td>
-	  <td> Tom Ryder </td>
-          <td><a href="https://openreview.net/pdf?id=8C8LJIqF4y"><b>Time Series Domain Adaptation via Channel-Selective Representation Alignment</b></a> Nauman Ahad, Mark A. Davenport, and Eva L. Dyer;  TMLR 2025</td>
-        </tr>
-	<tr>
+
+		<tr>
           <td>23&nbsp;Oct &nbsp;2025</td>
-	  <td> Professor Özgür Şimşek	</td>
+	      <td> Harvey Ayling </td>
+          <td><a href="https://www.nature.com/articles/s41586-022-04743-9"><b>People construct simplified mental representations to plan</b></a> Mark K. Ho, David Abel, Carlos G. Correa, Michael L. Littman, Jonathan D. Cohen & Thomas L. Griffiths; Nature 2022</td>
+    	</tr>
+		<tr>
+          <td>6&nbsp;Nov &nbsp;2025</td>
+	      <td> Will Butler</td>
           <td>TBC</td>
         </tr>
-	<tr>
-          <td>6&nbsp;Nov &nbsp;2025</td>
-	  <td> Will Butler</td>
+		<tr>
+          <td>20&nbsp;Nov &nbsp;2025</td>
+	      <td> Doug Tilley</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -86,9 +87,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Alexandros Rotsidis	</li>
-	<li>Dr Andrew Barnes	</li>
-	<li>Doug Tilley </li>
 	<li>Dr Alexander Power	</li>
 	<li>Emma Li	</li>
 	<li>Dina Theodosiadou </li>
@@ -221,9 +219,14 @@
 	</tr>
 	<tr>
           <td>8&nbsp;May &nbsp;2025</td>
-	  <td> Zilin Zhang </td>
+	  	  <td> Zilin Zhang </td>
           <td><a href="https://arxiv.org/abs/2402.04717"><b>InstructScene: Instruction-Driven 3D Indoor Scene Synthesis with Semantic Graph Prior</b></a> Chenguo Lin, Yadong Mu, ICLR 2024 </td>
         </tr>
+		<tr>
+          <td>9&nbsp;Oct &nbsp;2025</td>
+	  	  <td> Tom Ryder </td>
+          <td><a href="https://openreview.net/pdf?id=8C8LJIqF4y"><b>Time Series Domain Adaptation via Channel-Selective Representation Alignment</b></a> Nauman Ahad, Mark A. Davenport, and Eva L. Dyer;  TMLR 2025</td>
+    	</tr>
       </tbody>
     </table>
   </div>
