--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </tr>
 		<tr>
           <td>20&nbsp;Nov &nbsp;2025</td>
-	      <td> Doug Tilley</td>
+	      <td> Dr Alexander Power	</td>
           <td>TBC</td>
         </tr>
       </tbody>
@@ -87,7 +87,7 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dr Alexander Power	</li>
+	<li> Doug Tilley </li>
 	<li>Emma Li	</li>
 	<li>Dina Theodosiadou </li>
 	<li>Ningchao Wang	</li>
