--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 	      <td> Dr Alexander Power	</td>
           <td>TBC</td>
         </tr>
+		<tr>
+          <td>4&nbsp;Dec &nbsp;2025</td>
+	      <td> Doug Tilley </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -87,7 +92,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li> Doug Tilley </li>
 	<li>Emma Li	</li>
 	<li>Dina Theodosiadou </li>
 	<li>Ningchao Wang	</li>
