--- a/index.html
+++ b/index.html
@@ -65,11 +65,6 @@
       <tbody>
 
 		<tr>
-          <td>23&nbsp;Oct &nbsp;2025</td>
-	      <td> Harvey Ayling </td>
-          <td><a href="https://www.nature.com/articles/s41586-022-04743-9"><b>People construct simplified mental representations to plan</b></a> Mark K. Ho, David Abel, Carlos G. Correa, Michael L. Littman, Jonathan D. Cohen & Thomas L. Griffiths; Nature 2022</td>
-    	</tr>
-		<tr>
           <td>6&nbsp;Nov &nbsp;2025</td>
 	      <td> Will Butler</td>
           <td>TBC</td>
@@ -84,6 +79,11 @@
 	      <td> Doug Tilley </td>
           <td>TBC</td>
         </tr>
+		<tr>
+          <td>22&nbsp;Jan &nbsp;2026</td>
+	      <td> Emma Li	 </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -92,7 +92,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Emma Li	</li>
 	<li>Dina Theodosiadou </li>
 	<li>Ningchao Wang	</li>
 	<li>Yuchen Lu	</li>
@@ -228,6 +227,11 @@
           <td>9&nbsp;Oct &nbsp;2025</td>
 	  	  <td> Tom Ryder </td>
           <td><a href="https://openreview.net/pdf?id=8C8LJIqF4y"><b>Time Series Domain Adaptation via Channel-Selective Representation Alignment</b></a> Nauman Ahad, Mark A. Davenport, and Eva L. Dyer;  TMLR 2025</td>
+    	</tr>
+		<tr>
+          <td>23&nbsp;Oct &nbsp;2025</td>
+	      <td> Harvey Ayling </td>
+          <td><a href="https://www.nature.com/articles/s41586-022-04743-9"><b>People construct simplified mental representations to plan</b></a> Mark K. Ho, David Abel, Carlos G. Correa, Michael L. Littman, Jonathan D. Cohen & Thomas L. Griffiths; Nature 2022</td>
     	</tr>
       </tbody>
     </table>
