--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<tr>
           <td>6&nbsp;Nov &nbsp;2025</td>
 	      <td> Will Butler</td>
-          <td>TBC</td>
+          <td><a href="https://www.nature.com/articles/nphoton.2017.93"><b>Deep learning with coherent nanophotonic circuits</b></a> Yichen Shen, Nicholas C. Harris, Scott Skirlo, Mihika Prabhu, Tom Baehr-Jones, Michael Hochberg, Xin Sun, Shijie Zhao, Hugo Larochelle, Dirk Englund, Marin Soljacic, Nature Photonics 2017</td>
         </tr>
 		<tr>
           <td>20&nbsp;Nov &nbsp;2025</td>
