--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 	      <td> Emma Li	 </td>
           <td>TBC</td>
         </tr>
+		<tr>
+          <td>5&nbsp;Feb &nbsp;2026</td>
+	      <td> Dina Theodosiadou </td>
+          <td>TBC</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -87,7 +92,6 @@
 <h5>Future speakers </h5>
 
 <ol>
-	<li>Dina Theodosiadou </li>
 	<li>Ningchao Wang	</li>
 	<li>Yuchen Lu	</li>
 	<li>Philip Lorimer	</li>
